--- a/assesst/style.css
+++ b/assesst/style.css
@@ -41,7 +41,7 @@
 .top-head-text{
     font-family: funnelSansVar ;
     font-size: 2rem;
-    margin: 3rem  auto 0.5rem auto;
+    margin: 2rem  auto 0.5rem auto;
 }
 .top-head-cute-text{
     font-family: meow ;
@@ -49,7 +49,6 @@
 }
 .top-head-text,
 .top-head-cute-text {
-    margin: 0.5rem 0;
     font-size: 1.5rem;
     z-index: 2; 
     font-weight: 500;
@@ -79,7 +78,53 @@
     background-size: cover;
     min-height: 40rem;
     z-index: 2;
-    margin: 1.5rem auto;
+    margin: 1rem auto 0 auto;
     box-shadow: 5px 9px 30px -6px rgba(0,0,0,0.75);
 }
+
 /* ------- Header styles -------- */
+
+.header-section{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.logo-container{
+    position: relative;
+}
+.logo-container img{
+    position: fixed;
+    width: 100rem;
+    top: 8%;
+    left: 9%;
+
+}
+.topic-links-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.7rem;
+}
+.links-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    gap: 2.7rem;
+    margin: 5rem 0 ;
+}
+.links-container > li {
+    list-style-type: none;
+}
+.link{
+    text-decoration: none;
+    color: var(--primary);
+    font-family: SerifRegular ;
+    font-weight: 200;
+    text-transform: uppercase;
+}
+.search-container{
+    
+}
+.icon{
+
+}
