--- a/assesst/style.css
+++ b/assesst/style.css
@@ -31,6 +31,7 @@
     --footer-bg : #47382a;  /* footer bg */
     --main-bg : #F0ECE1;  /* main bg */
     --product-bg : #9B785A;  /* product bg */
+    --price-bg : #D8B192;     /* product bg */
 }
 
 /* ------- Main styles -------- */
@@ -239,20 +240,61 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
+    margin-left: 5rem;
+    height: auto;
+    gap: 6rem;
 }
 .product-container{
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
     
 }
 .product-img{
     max-width: 9rem;
     object-fit: cover;
+    position: absolute;
+    left: -31%;
 
 }
 .produc-info{
- text-align: center;
- max-width: 9rem;
- background-color: var(--product-bg);
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: column;
+    text-align: center;
+    max-width: 10rem;
+    background-color: var(--product-bg);
+    color: #fff;
+    font-size: 1.2rem;
+    font-family: SerifRegular ;
+    padding: 0.3rem 3rem;
+    border-radius: 50px;
+    cursor: pointer;
+
+}
+.product-container span {
+    font-size: 1rem;
+    font-weight: 100;
+    font-family: SerifItalic ;
 }
 .product-price{
-
+    position: absolute;
+    background-color: var(--price-bg);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    border-radius: 200%;
+    text-align: center;
+    width: 1rem;
+    height: 1rem;
+    color: #fff;
+    font-size: 1.2rem;
+    font-weight: 800;
+    font-family: SerifRegular ;
+    right: 4%;
+    top: 65%;
 }
