--- a/assesst/style.css
+++ b/assesst/style.css
@@ -130,6 +130,7 @@
     font-family: SerifRegular ;
     font-weight: 200;
     text-transform: uppercase;
+    transition: all 0.15s ease-in;
 }
 .link:hover{
     color: #DBC9BB ;
@@ -230,12 +231,14 @@
     padding: 5px;
     border-radius: 100px;
     text-align: center;
+    transition: all 0.15s ease-in;
     
 }  
 .socials-media i:hover{
     cursor: pointer;
     background-color: var(--background);
     color: var(--primary);
+    transform: scale(1.2);
 }
 .products{
     display: flex;
@@ -252,7 +255,10 @@
     align-items: center;
     justify-content: center;
     min-width: 14rem;
-    
+    transition: all 0.45s ease-in;
+}
+.product-container:hover {
+    transform: translateY(-7px);
 }
 .product-img{
     max-width: 9rem;
