--- a/assesst/styles/style.css
+++ b/assesst/styles/style.css
@@ -256,9 +256,11 @@
     justify-content: center;
     min-width: 14rem;
     transition: all 0.45s ease-in;
+    border-radius: 50px;
 }
 .product-container:hover {
     transform: translateY(-7px);
+    box-shadow: 0 8px 20px rgba(0,0,0,0.2);
 }
 .product-img{
     max-width: 9rem;
