change fonts URL

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,27 +1,27 @@
 /* Fonts */
 @font-face{
     font-family: meow ;
-    src: url(/assesst/fonts/MeowScript-Regular.ttf);
+    src: url(/fonts/MeowScript-Regular.ttf);
 }
 @font-face {
     font-family: FunnelSensItalic;
-    src: url(/assesst/fonts/FunnelSans-Italic-VariableFont_wght.ttf);
+    src: url(/fonts/FunnelSans-Italic-VariableFont_wght.ttf);
 }
 @font-face {
     font-family: funnelSansVar;
-    src: url(/assesst/fonts/FunnelSans-VariableFont_wght.ttf);
+    src: url(/fonts/FunnelSans-VariableFont_wght.ttf);
 }
 @font-face {
     font-family: SerifRegular;
-    src: url(/assesst/fonts/DMSerifText-Regular.ttf);
+    src: url(/fonts/DMSerifText-Regular.ttf);
 }
 @font-face {
     font-family: SerifItalic;
-    src: url(/assesst/fonts/DMSerifText-Italic.ttf);
+    src: url(/fonts/DMSerifText-Italic.ttf);
 }
 @font-face {
     font-family: sat;
-    src: url(/assesst/fonts/Satisfy-Regular.ttf);
+    src: url(/fonts/Satisfy-Regular.ttf);
 }
 /* colors  */
 :root{
