--- a/styles/style.css
+++ b/styles/style.css
@@ -9,19 +9,19 @@
 }
 @font-face {
     font-family: funnelSansVar;
-    src: url(/fonts/FunnelSans-VariableFont_wght.ttf);
+    src: url(fonts/FunnelSans-VariableFont_wght.ttf);
 }
 @font-face {
     font-family: SerifRegular;
-    src: url(/fonts/DMSerifText-Regular.ttf);
+    src: url(fonts/DMSerifText-Regular.ttf);
 }
 @font-face {
     font-family: SerifItalic;
-    src: url(/fonts/DMSerifText-Italic.ttf);
+    src: url(fonts/DMSerifText-Italic.ttf);
 }
 @font-face {
     font-family: sat;
-    src: url(/fonts/Satisfy-Regular.ttf);
+    src: url(fonts/Satisfy-Regular.ttf);
 }
 /* colors  */
 :root{
